[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/block/crystal_wall.png" type="Texture" id=1]
[ext_resource path="res://assets/block/strong_wall.png" type="Texture" id=2]
[ext_resource path="res://lanquges/lanquges.tres" type="Theme" id=3]
[ext_resource path="res://script_scenes/singleplayer_lists.gd" type="Script" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 5 )

[node name="StrongWall" type="Sprite" parent="."]
position = Vector2( 512, 300 )
scale = Vector2( 32, 18.75 )
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Node2D"]
margin_left = 176.0
margin_top = 56.0
margin_right = 656.0
margin_bottom = 544.0

[node name="VScrollBar" type="VScrollBar" parent="."]
anchor_left = 0.012
anchor_top = 0.016
anchor_right = 0.012
anchor_bottom = 0.016
margin_left = 696.0
margin_top = 40.0
margin_right = 720.0
margin_bottom = 104.0
rect_scale = Vector2( 1, 8 )
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
max_value = 3.0
step = 1.0

[node name="CrystalWall" type="Sprite" parent="."]
position = Vector2( 241.875, 368 )
scale = Vector2( 32.25, 1.75 )
texture = ExtResource( 1 )
offset = Vector2( 8.5, 116.571 )

[node name="CrystalWall2" type="Sprite" parent="."]
position = Vector2( 240, -176 )
scale = Vector2( 32, 1.75 )
texture = ExtResource( 1 )
offset = Vector2( 8.5, 116.571 )

[node name="back" type="Button" parent="."]
margin_left = 904.0
margin_top = 544.0
margin_right = 963.0
margin_bottom = 569.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
text = "BACK"

[node name="Label" type="Label" parent="."]
margin_left = 336.0
margin_right = 453.0
margin_bottom = 19.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 3 )
text = "SINGLPLAYER"

[node name="play" type="Button" parent="."]
margin_top = 544.0
margin_right = 56.0
margin_bottom = 569.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
disabled = true
text = "PLAY"

[node name="create" type="Button" parent="."]
margin_left = 136.0
margin_top = 544.0
margin_right = 326.0
margin_bottom = 569.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
text = "CREATE NEW WORLD"

[node name="change" type="Button" parent="."]
margin_left = 544.0
margin_top = 544.0
margin_right = 627.0
margin_bottom = 569.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
disabled = true
text = "CHANGE"

[node name="delete" type="Button" parent="."]
margin_left = 728.0
margin_top = 544.0
margin_right = 807.0
margin_bottom = 569.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 3 )
disabled = true
text = "DELETE"

[connection signal="value_changed" from="VScrollBar" to="." method="_on_VScrollBar_value_changed"]
[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="delete" to="." method="_on_delete_pressed"]
